empiezo curso de YT programacion ATS y un par de ejercicios

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 /ejercicios_POO/nbproject/private/
 /ejercicios_POO/build/
+/Curso_Java/nbproject/private/
+/programacion_ats/POO/nbproject/private/
+/programacion_ats/POO/build/
+/programacion_ats/Ejercicio1_POO/nbproject/private/
+/programacion_ats/Ejercicio1_POO/build/
