ejercicios 9 y 10 de programacion_ats,y empiezo con ejercicios herencia

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,13 @@
 /programacion_ats/POO/build/
 /programacion_ats/Ejercicio1_POO/nbproject/private/
 /programacion_ats/Ejercicio1_POO/build/
+/programacion_ats/Ejemplo/nbproject/private/
+/programacion_ats/Ejemplo/build/
+/programacion_ats/Polimorfismo1/nbproject/private/
+/programacion_ats/Polimorfismo1/build/
+/programacion_ats/Ejercicio9_POO/nbproject/private/
+/programacion_ats/Ejercicio9_POO/build/
+/programacion_ats/Ejercicio10_POO/nbproject/private/
+/programacion_ats/Ejercicio10_POO/build/
+/ejercicios_POO/Herencia/nbproject/private/
+/ejercicios_POO/Herencia/build/
