ejercicio 2 de ejercicio Herencia POO 2 me he quedado en el metodo agregar bebida y tengo problemas con el id

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@
 /programacion_ats/Ejercicio10_POO/build/
 /ejercicios_POO/Herencia/nbproject/private/
 /ejercicios_POO/Herencia/build/
+/ejercicios_POO/Herencia_2/nbproject/private/
+/ejercicios_POO/Herencia_2/build/
