Visto: fileWriter,fileReader,FileInputStream,FileOutputStream

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@
 /ejercicios_POO/Herencia/build/
 /ejercicios_POO/Herencia_2/nbproject/private/
 /ejercicios_POO/Herencia_2/build/
+/ficheros/Ficheros/nbproject/private/
+/ficheros/Ficheros/build/
