ficheros serializabes vistos

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@
 /ejercicios_POO/Herencia_2/build/
 /ficheros/Ficheros/nbproject/private/
 /ficheros/Ficheros/build/
+/ficheros/Serializables/nbproject/private/
+/ficheros/Serializables/build/
